fix(condo): DOMA-8515 new meter section design review fixes  (#4845)
* fix(condo): DOMA-8515 removed default date filter in readings

* fix(condo): DOMA-8515 added complete createMeter modal translations

* fix(condo): DOMA-8515 design review fixes

* fix(condo): DOMA-8515 design review fixes

* fix(condo): DOMA-8515 design review fixes

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2233,6 +2233,8 @@
   "tour.newFeatures.resident.chatWithOrganization": "Leave comments on tickets in the chat",
   "tour.newFeatures.resident.payBills": "Pay bills in the Doma app",
   "tour.newFeatures.resident.createMeterReadings": "Submit meter readings in the mobile app",
+  "tour.newFeatures.resident.takeReadingsFromResidents": "Collect meter readings from residents",
+  "tour.newFeatures.resident.archiveMeters": "Archive metering devices",
   "tour.newFeatures.resident.downloadApp": "Download the app and register",
   "tour.guide.title": "Doma - Resident Mobile App",
   "tour.guide.aboutApp.title": "How the Resident App helps Management Companies",
