--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -668,7 +668,7 @@
   "pages.condo.property.index.CreatePropertyTitle": "Добавление дома",
   "pages.condo.property.index.EditPropertyModalTitle": "Редактировать",
   "pages.condo.property.index.EmptyList.header": "Пока домов нет",
-  "pages.condo.property.index.EmptyList.manualCreateCard.body.description": "Заполнить форму с указанием адреса",
+  "pages.condo.property.index.EmptyList.manualCreateCard.body.description": "Заполнить форму с\u00A0указанием адреса",
   "pages.condo.property.index.PageTitle": "Дома",
   "pages.condo.property.index.TableField.Address": "Адрес",
   "pages.condo.property.index.TableField.TasksInWorkCount": "Заявок в работе",
@@ -780,7 +780,7 @@
   "pages.condo.meter.create.resourceOwnedByAnotherOrganization": "Этот ресурс больше не принадлежит этой УК. Пожалуйста, обратитесь в техподдержку",
   "pages.condo.meter.index.PageTitle": "Приборы и показания",
   "pages.condo.meter.index.EmptyList.header": "Пока ИПУ нет",
-  "pages.condo.meter.index.EmptyList.manualCreateCard.body.description": "Заполнить форму с указанием адреса",
+  "pages.condo.meter.index.EmptyList.manualCreateCard.body.description": "Заполнить форму с\u00A0указанием адреса",
   "pages.condo.propertyMeter.index.EmptyList.header": "Пока ОДПУ нет",
   "pages.condo.meter.index.CreateMeterReadingButtonLabel": "Добавить показания",
   "pages.condo.meter.index.CreateMeterButtonLabel": "Добавить счетчик",
@@ -1946,7 +1946,7 @@
   "TicketDeferredDeadline": "Срок отложенности заявки",
   "ticket.EmptyList.header": "Пока заявок нет",
   "ticket.EmptyList.title": "Создайте первую, это просто",
-  "ticket.EmptyList.manualCreateCard.body.description": "Заполнить форму с указанием адреса и описанием проблемы",
+  "ticket.EmptyList.manualCreateCard.body.description": "Заполнить форму с\u00A0указанием адреса и описанием проблемы",
   "ticket.status.OPEN.name": "Открыта",
   "ticket.status.IN_PROGRESS.name": "В работе",
   "ticket.status.DECLINED.name": "Отменена",
@@ -2233,6 +2233,8 @@
   "tour.newFeatures.resident.chatWithOrganization": "Оставлять комментарии по заявке в чате",
   "tour.newFeatures.resident.payBills": "Оплачивать квитанции в приложении Doma",
   "tour.newFeatures.resident.createMeterReadings": "Передавать показания счетчиков в мобильном приложении",
+  "tour.newFeatures.resident.takeReadingsFromResidents": "Принимать показания ИПУ от жителей",
+  "tour.newFeatures.resident.archiveMeters": "Выводить счетчики из работы",
   "tour.newFeatures.resident.downloadApp": "Скачать приложение и зарегистрироваться",
   "tour.guide.title": "Doma — мобильное приложение жителя",
   "tour.guide.aboutApp.title": "Как приложение для Жителя помогает УК",
@@ -2337,7 +2339,7 @@
   "employee.EmptyList.header": "Пока сотрудников нет",
   "employee.EmptyList.title": "Добавьте первого, это просто",
   "contact.EmptyList.header": "Пока контактов жителей нет",
-  "contact.EmptyList.manualCreateCard.body.description": "Заполнить форму с указанием адреса, помещения, телефона и  ФИО",
+  "contact.EmptyList.manualCreateCard.body.description": "Заполнить форму с\u00A0указанием адреса, помещения, телефона и  ФИО",
   "contact.ConfirmDeleteTitle": "Удалить жителя?",
   "contact.ConfirmDeleteMessage": "Все данные о жителе сотрутся навсегда",
   "contact.ContactDuplicateError": "Контакт с таким номером телефона уже зарегистрирован в этом помещении",
