feat(condo): DOMA-9177 retention loops (#4842)
* feat(condo): DOMA-9177 retention loops

* feat(condo): DOMA-9177 added tags for email transport

* feat(condo): DOMA-9177 added tags for daily mails

* refactor(condo): DOMA-9177 move statistics logic to class

* refactor(condo): DOMA-9177 move added types

* fix(condo): DOMA-9177 removed broken import

* feat(condo): DOMA-9177 fixed bugs. Added feature flag. Some refactored

* refactor(condo): DOMA-9177 some refactored

* test(condo): DOMA-9177 added tests

* test(condo): DOMA-9177 added tests. Fixed bugs

* feat(condo): DOMA-9177 added logger. Added tests

* feat(condo): DOMA-9177 added cache

* feat(condo): DOMA-9177 added translations

* test(condo): DOMA-9177 updated tests

* fix(condo): DOMA-9177 fixed message delivery options

* feat(condo): DOMA-9177 added mjml for emails

* feat(condo): DOMA-9177 added mjml templates for daily mails

* feat(condo): DOMA-9177 update templates for daily mails

* feat(condo): DOMA-9177 update templates for daily mails

* feat(condo): DOMA-9177 update templates for daily mails. Added translations and links

* fix(condo): DOMA-9177 fixed templates

* fix(condo): DOMA-9177 fixed templates

* refactor(condo): DOMA-9177 refactored helper utils

* fix(condo): DOMA-9177 fixed support email

* feat(condo): DOMA-9177 added "landing_url" and "social_media_links" envs

* feat(condo): DOMA-9177 added a limit on sending messages for new organizations. Fixed handling of deleted organizations. Fixed sending empty data

* test(condo): DOMA-9177 added test for case if statistics is empty

* feat(condo): DOMA-9177 updated incidents to display in email

* feat(condo): DOMA-9177 added package "lru-cache"

* feat(condo): DOMA-9177 updated schema

* refactor(condo): DOMA-9177 removed comment

* refactor(condo): DOMA-9177 moved incident classifier ids to const

* refactor(condo): DOMA-9177 fixed calculation of number of addresses for inci

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1939,6 +1939,10 @@
   "notification.messages.BILLING_RECEIPT_FILE_ADDED.email.subject": "{data.organization}. New billing receipt",
   "notification.messages.SERVICE_USER_CREATED.email.subject": "Service account successfully registered",
   "notification.messages.DEV_PORTAL_MESSAGE.email.subject": "{subject}",
+  "notification.messages.SEND_DAILY_STATISTICS.email.subject": "Important for the date {data.date}\uD83C\uDFD8\uFE0F",
+  "notification.messages.SEND_DAILY_STATISTICS.email.allProperties": "All properties ({organization})",
+  "notification.messages.SEND_DAILY_STATISTICS.email.moreProperties": "and more {more} properties",
+  "notification.messages.SEND_DAILY_STATISTICS.email.moreIncidents": "and more {more} incidents",
   "news.ConfirmDeleteTitle": "Delete news?",
   "news.ConfirmDeleteMessage": "It cannot be restored. But you can recreate it.",
   "news.CancelMessage": "Keep",
