--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1939,6 +1939,10 @@
   "notification.messages.BILLING_RECEIPT_FILE_ADDED.email.subject": "{data.organization}. Квитанции за услуги ЖКХ",
   "notification.messages.SERVICE_USER_CREATED.email.subject": "Сервисная учетная запись успешно зарегистрирована",
   "notification.messages.DEV_PORTAL_MESSAGE.email.subject": "{subject}",
+  "notification.messages.SEND_DAILY_STATISTICS.email.subject": "Важное к дате {data.date}\uD83C\uDFD8\uFE0F",
+  "notification.messages.SEND_DAILY_STATISTICS.email.allProperties": "Все дома ({organization})",
+  "notification.messages.SEND_DAILY_STATISTICS.email.moreProperties": "и еще {more} домов",
+  "notification.messages.SEND_DAILY_STATISTICS.email.moreIncidents": "и еще {more} отключений",
   "news.ConfirmDeleteTitle": "Удалить новость?",
   "news.ConfirmDeleteMessage": "Восстановить ее будет нельзя. Но можно создать заново.",
   "news.CancelMessage": "Оставить",
