feat(condo) DOMA-7889 News cross posting frontend (#4830)
* fix(condo) DOMA-7889: init news sharing integration

* feat(condo): DOMA-7888: proof of concept greendom integration app

* feat(condo): DOMA-7889: proof of concept frontend code

* feat(condo): DOMA-7889: remove telegram sharing submodule from the code

feat(condo): DOMA-7889: fix gitmodules

* fix(ui): DOMA-7889: make Card component grow with row && fix border on hover

* refactor(condo): DOMA-7889: introduce translations on SelectSharingAppControl.tsx

* refactor(condo): DOMA-7889: beautify news type markup

* feat(condo): DOMA-7889: add app skipping feature and fix card grids

* fix(condo): DOMA-7889: fix a few linter errors

* feat(condo): DOMA-7889: drop skipped steps on sharing app update

* refactor(condo): DOMA-7889: refactor settings page

* refactor(condo): DOMA-7889: refactor preview widget

* chore(condo): DOMA-7889: update submodules

* refactor(condo): DOMA-7889: implement cleaner form architecture – store form data in useState by steps

* refactor(condo): DOMA-7889: update migrations

* fix(condo): DOMA-7889: fix typescript errors

* fix(condo): DOMA-7889: add more useCallbacks

fix(condo): DOMA-7889: add more useCallbacks

* fix(condo): DOMA-7889: fix eslint errors

* chore(condo): DOMA-7889: update submodule to relevant version

* chore(condo): DOMA-7889: fix variable usage before declaration error

* feat(condo): DOMA-7889: add publish delayed shared news item task, handle new sendAt logic, add tests

* fix(condo): DOMA-7889: fix eslint errors and some warnings

fix(condo): DOMA-7889: fix eslint errors and some warnings

* fix(condo): DOMA-7889: upgrade tests

fix(condo): DOMA-7889: upgrade tests

* fix(condo): DOMA-7889: fix eslint errors

fix(condo): DOMA-7889: fix eslint errors

* fix(condo): DOMA-7889: remove greendom submodule

fix(condo): DOMA-7889: remove greendom submodule

* fix(condo): DOMA-7889: regenerate migrations

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1386,9 +1386,16 @@
   "pages.news.newsItemCard.author": "автор {createdBy}{isOwner, plural, other {} one { (вы)}}",
   "pages.news.newsItemCard.status.notSent": "Ещё не отправлено",
   "pages.news.newsItemCard.status.sending": "Отправляется",
+  "pages.news.newsItemCard.status.error": "Ошибка при отправке",
+  "pages.news.newsItemCard.status.success": "Доставлено",
   "pages.news.create.preview.app.notificationFromOrganization": "Уведомление от УК",
   "pages.news.create.preview.app.receivedAt": "Сегодня, 9:00",
   "pages.news.create.preview.app.validUntil": "актуально до {validBefore}",
+  "pages.news.create.selectSharingApp": "Выберите, куда отправить новость",
+  "pages.news.create.selectSharingApp.appDescription": "Новость появится в приложении {appName}",
+  "pages.news.create.selectSharingApp.otherApps": "Другие каналы",
+  "pages.news.create.selectSharingApp.otherApps.description": "Настройте отправку новостей в другие приложения",
+  "pages.news.create.selectSharingApp.otherApps.actionButtonText": "Настроить",
   "pages.condo.news.index.pageTitle": "Новости",
   "pages.condo.news.index.tableField.body": "Текст сообщения",
   "pages.condo.news.index.tableField.addresses": "Адресаты",
@@ -1398,11 +1405,30 @@
   "pages.condo.news.index.field.date.sending": "Отправляется",
   "pages.condo.news.index.emptyList.header": "Пока новостей нет",
   "pages.condo.news.index.emptyList.title": "Добавим первую новость прямо сейчас?",
+  "pages.condo.news.settings.pageTitle": "Настройки",
+  "pages.condo.news.settings.sharingAppSettingsTitle": "Выберите каналы отправки",
+  "pages.condo.news.settings.appCard.description": "Отправка новостей в {sharingAppName}",
   "pages.condo.news.resend": "Повторить отправку",
   "pages.condo.news.validBefore": "до {validBefore}",
   "pages.condo.news.notification.success.title": "Новость отправлена",
   "pages.condo.news.notification.success.description": "Отправку можно отменить в течение 15 секунд",
   "pages.condo.news.notification.success.button": "Отменить отправку",
+  "pages.condo.news.preview.push": "Push-уведомление",
+  "pages.condo.news.preview.condoAppName": "Doma",
+  "pages.condo.news.steps.selectApps": "Куда",
+  "pages.condo.news.steps.review": "Превью и время",
+  "pages.condo.news.steps.review.title": "Ваша новость",
+  "pages.condo.news.steps.review.newsItemCard.titleLabel": "Заголовок",
+  "pages.condo.news.steps.review.newsItemCard.bodyLabel": "Текст новости",
+  "pages.condo.news.steps.review.newsItemCard.showMoreLabel": "Показать весь текст",
+  "pages.condo.news.steps.skipLabelShort": "Пропустить",
+  "pages.condo.news.steps.skipLabelLong": "Не отправлять новость в {appName}",
+  "pages.condo.news.steps.skipPrefix": "Пропущен",
+  "pages.condo.news.steps.nextStep": "Далее",
+  "pages.condo.news.steps.sharingApp.recipientsLabel": "Получатели",
+  "pages.condo.news.steps.sharingApp.recipientsAlert": "Новость будет отправлена на дома, квартиры и подъезды из прошлого шага – вернитесь на шаг назад, чтобы поменять эти данные",
+  "pages.condo.news.steps.sharingApp.notSupported": "Ошибка в настройке мини-приложения. Мы уже разбираемся с этой проблемой..",
+  "pages.condo.news.dateAndTimePlaceholder": "Дата и время",
   "pages.reports.paymentTooltip": "Для отображения статистики необходимо использовать одну из следующих биллинговых интеграций: ГИС-ЖКХ или Квартплата24",
   "pages.reports.paymentsTotal": "Оплата квитанций (из МП жителя)",
   "pages.reports.residentsTitle": "Внедрение моб. приложения жителя",
@@ -1626,7 +1652,7 @@
   "news.fields.body.placeholder": "Сформулируйте текст новости — он появится на главном экране приложения жителя, в разделе «Новости» и в качестве push-уведомления",
   "news.fields.properties.allSelected": "Все дома",
   "news.fields.validBefore.title": "Сообщение будет закреплено на главном экране приложения до указанного срока или пока житель его не прочитает. После — останется в ленте новостей и разделе уведомлений",
-  "news.fields.sendAt.label": "Отправить в",
+  "news.fields.sendAt.label": "Отправить",
   "news.fields.title.error.length": "Пожалуйста, добавьте заголовок",
   "news.fields.body.error.length": "Пожалуйста, добавьте основной текст",
   "news.fields.makeText.label": "Составьте текст",
