--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1386,9 +1386,16 @@
   "pages.news.newsItemCard.author": "author {createdBy}{isOwner, plural, other {} one { (you)}}",
   "pages.news.newsItemCard.status.notSent": "Not sent yet",
   "pages.news.newsItemCard.status.sending": "Sending",
+  "pages.news.newsItemCard.status.error": "Error",
+  "pages.news.newsItemCard.status.success": "Delivered",
   "pages.news.create.preview.app.notificationFromOrganization": "Notification from organization",
   "pages.news.create.preview.app.receivedAt": "Today, 9:00",
   "pages.news.create.preview.app.validUntil": "valid until {validBefore}",
+  "pages.news.create.selectSharingApp": "Select sharing apps",
+  "pages.news.create.selectSharingApp.appDescription": "Cross post your news to {appName}",
+  "pages.news.create.selectSharingApp.otherApps": "Other apps",
+  "pages.news.create.selectSharingApp.otherApps.description": "Setup news cross posting",
+  "pages.news.create.selectSharingApp.otherApps.actionButtonText": "Setup",
   "pages.condo.news.index.pageTitle": "News",
   "pages.condo.news.index.tableField.body": "Message Text",
   "pages.condo.news.index.tableField.addresses": "Addresses",
@@ -1398,11 +1405,30 @@
   "pages.condo.news.index.field.date.sending": "Sending",
   "pages.condo.news.index.emptyList.header": "No news yet",
   "pages.condo.news.index.emptyList.title": "Shall we add the first news right now?",
+  "pages.condo.news.settings.pageTitle": "Settings",
+  "pages.condo.news.settings.sharingAppSettingsTitle": "Select sharing apps",
+  "pages.condo.news.settings.appCard.description": "Send your news to {sharingAppName}",
   "pages.condo.news.resend": "Resend",
   "pages.condo.news.validBefore": "until {validBefore}",
   "pages.condo.news.notification.success.title": "News sent",
   "pages.condo.news.notification.success.description": "Sending can be cancelled within 15 seconds",
   "pages.condo.news.notification.success.button": "Cancel send",
+  "pages.condo.news.preview.push": "Push notification",
+  "pages.condo.news.preview.condoAppName": "Doma",
+  "pages.condo.news.steps.selectApps": "Apps",
+  "pages.condo.news.steps.review": "Review",
+  "pages.condo.news.steps.review.title": "Your news",
+  "pages.condo.news.steps.review.newsItemCard.titleLabel": "Title",
+  "pages.condo.news.steps.review.newsItemCard.bodyLabel": "Body",
+  "pages.condo.news.steps.review.newsItemCard.showMoreLabel": "Expand...",
+  "pages.condo.news.steps.skipLabelShort": "Skip step",
+  "pages.condo.news.steps.skipLabelLong": "Skip sending news to {appName}",
+  "pages.condo.news.steps.skipPrefix": "Skipped",
+  "pages.condo.news.steps.nextStep": "Next step",
+  "pages.condo.news.steps.sharingApp.recipientsLabel": "Recipients",
+  "pages.condo.news.steps.sharingApp.recipientsAlert": "News will be sent to houses, flats and sections selected on a previous step. Please go back if you need to change them",
+  "pages.condo.news.steps.sharingApp.notSupported": "Condo does not support this miniapp",
+  "pages.condo.news.dateAndTimePlaceholder": "Date",
   "pages.reports.paymentTooltip": "To display statistics, you must use one of the following billing integrations: ГИС-ЖКХ or Квартплата24",
   "pages.reports.paymentsTotal": "Payment of receipts (from resident mobile app)",
   "pages.reports.residentsTitle": "implementation of the mobile app",
