--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -126,6 +126,7 @@
   "SearchByPhoneNumber.modal.select.notFoundContent": "No such contact was found",
   "SearchByPhoneNumber.modal.select.notFoundContent.createContact": "Add a resident's address",
   "SearchByPhoneNumber.modal.select.notFoundContent.createTicket": "Create ticket",
+  "Service": "Service",
   "EnterPhoneNumber": "Enter phone number",
   "EnterDate": "Enter date",
   "EnterVerificationCode": "Enter verification code",
