fix(condo): DOMA-8515 meter section qa review fixes (#4862)
* fix(condo): DOMA-8515 added access for meter readings update

* fix(condo): DOMA-8515 removed export to excel button on meters tabs

* fix(condo): DOMA-8515 fixed columns and filters

* feat(condo): DOMA-8515 added access rights for meterReading bulk requests

* fix(condo): DOMA-8515 many qa review fixes

* fix(condo): DOMA-8515 more qa fixes

* fix(condo): DOMA-8515 dont show meters for deleted properties

* fix(condo): DOMA-8515 restrict chanhing organization on meter page

* fix(condo): DOMA-8515 add tip about refreshing page agter import

* fix(condo): DOMA-8515 fix tabs rerender in cc

* fix(condo): DOMA-8515 add validation of same accountNumber

* fix(condo): DOMA-8515 fix account number display

* feat(condo): DOMA-8515 move callcenter to new meters design

* feat(callcenter): DOMA-8515 add meter in cc with correct orgId

* feat(callcenter): DOMA-8515 added hint to add meter if no exist

* fix(condo): DOMA-8515 fixed link on tour

* fix(callcenter): DOMA-8515 dont show hint for unuit if no address (in cc)

* feat(callcenter): DOMA-8515 added media for import in cc

* fix(condo): DOMA-8515 fixed type

* feat(condo): DOMA-8515 added tests for reading update logic

* feat(condo): DOMA-8515 update cc submodule to main

* feat(condo): DOMA-8515 pr fix

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -793,6 +793,7 @@
   "pages.condo.meter.index.MeterType.meterReading": "Meter readings",
   "pages.condo.meter.index.MeterType.houseMeterReading": "House meter readings",
   "pages.condo.meter.index.propertyMeterTab": "Meter log",
+  "pages.condo.meter.index.meterReadingTabCC": "Meter readings",
   "pages.condo.meter.index.reportingPeriodTab": "Meter readings reporting period",
   "pages.condo.meter.index.reportingPeriod.EmptyList.create": "Create period",
   "pages.condo.meter.index.reportingPeriod.defaultPeriod": "By default, the reporting period starts on {startAt} and ends on {finishAt} of each month",
@@ -1092,6 +1093,8 @@
   "pages.condo.meter.reportingPeriod.create.addressPlaceholderIfDefaultPeriod": "Applies to all properties without a special period",
   "pages.condo.meter.reportingPeriod.create.addressPlaceholder": "Select property",
   "pages.condo.meter.reportingPeriod.EmptyList.header": "Submission period not yet added",
+  "pages.condo.meter.alert.BlockedEditing.title": "Editing of the metering device is not available",
+  "pages.condo.meter.alert.BlockedEditing.description": "You cannot change the device because the specified address is no longer in service",
   "pages.condo.settings.employeeRoles.permissionGroup.tickets": "Control room",
   "pages.condo.settings.employeeRoles.permission.canReadTickets": "View tickets",
   "pages.condo.settings.employeeRoles.permission.canManageTickets": "Manage tickets",
@@ -2347,7 +2350,7 @@
   "tasks.MeterReadingsImportTask.progress.title": "Import meter readings",
   "tasks.MeterReadingsImportTask.progress.description.preparing": "Preparing to import meter readings",
   "tasks.MeterReadingsImportTask.progress.description.processing": "Meter readings processed: {imported} of {total}",
-  "tasks.MeterReadingsImportTask.progress.description.completed": "File has been created",
+  "tasks.MeterReadingsImportTask.progress.description.completed": "File has been created, please refresh the page",
   "tasks.MeterReadingsImportTask.progress.description.partiallyCompleted": "File partially imported. Fix errors and upload broken records again",
   "tasks.MeterReadingsImportTask.progress.description.error": "File not imported. {errorMessage}",
   "tasks.MeterReadingsImportTask.progress.description.completed.link.label": "Download",
