--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -793,6 +793,7 @@
   "pages.condo.meter.index.MeterType.meterReading": "ИПУ",
   "pages.condo.meter.index.MeterType.houseMeterReading": "ОДПУ",
   "pages.condo.meter.index.propertyMeterTab": "Показания ОДПУ",
+  "pages.condo.meter.index.meterReadingTabCC": "Показания ИПУ",
   "pages.condo.meter.index.reportingPeriodTab": "Период подачи показаний ИПУ",
   "pages.condo.meter.index.reportingPeriod.EmptyList.create": "Добавить период",
   "pages.condo.meter.index.reportingPeriod.defaultPeriod": "По-умолчанию период подачи показаний начинается {startAt} и заканчивается {finishAt} числа каждого месяца",
@@ -1092,6 +1093,8 @@
   "pages.condo.meter.reportingPeriod.create.addressPlaceholderIfDefaultPeriod": "Распрастраняется на все дома без специального периода",
   "pages.condo.meter.reportingPeriod.create.addressPlaceholder": "Выберите дом",
   "pages.condo.meter.reportingPeriod.EmptyList.header": "Период подачи показаний пока не добавлен",
+  "pages.condo.meter.alert.BlockedEditing.title": "Редактирование прибора учета недоступно",
+  "pages.condo.meter.alert.BlockedEditing.description": "Вы не можете изменить счетчик, потому что указанный адрес больше не обслуживается",
   "pages.condo.settings.employeeRoles.permissionGroup.tickets": "Диспетчерская",
   "pages.condo.settings.employeeRoles.permission.canReadTickets": "Просмотр заявок",
   "pages.condo.settings.employeeRoles.permission.canManageTickets": "Управление заявками",
@@ -2347,7 +2350,7 @@
   "tasks.MeterReadingsImportTask.progress.title": "Импорт ИПУ",
   "tasks.MeterReadingsImportTask.progress.description.preparing": "Подготовка к импорту",
   "tasks.MeterReadingsImportTask.progress.description.processing": "Обработано записей: {imported} из {total}",
-  "tasks.MeterReadingsImportTask.progress.description.completed": "Файл импортирован",
+  "tasks.MeterReadingsImportTask.progress.description.completed": "Файл импортирован, пожалуйста, обновите страницу",
   "tasks.MeterReadingsImportTask.progress.description.partiallyCompleted": "Файл импортирован частично. Устраните ошибки и импортируйте ошибочные строки заново",
   "tasks.MeterReadingsImportTask.progress.description.error": "Файл не импортирован. {errorMessage}",
   "tasks.MeterReadingsImportTask.progress.description.completed.link.label": "Скачать",
