feat(condo): DOMA-9348 ticket document generation (#4887)
* feat(condo): DOMA-9348 ticket document generation

* feat(condo): DOMA-9348 ticket document generation (front-end)

* feat(condo): DOMA-9348 removed icons from button

* feat(condo): DOMA-9348 added migrations and updated schema

* fix(condo): DOMA-9348 fixed where

* feat(condo): DOMA-9348 added loading of tasks progress

* fix(condo): DOMA-9348 fixed imports

* fix(condo): DOMA-9348 fixed deps

* feat(callcenter): DOMA-9348 added loading of tasks progress

* fix(condo): DOMA-9348 fixed types

* test(condo): DOMA-9348 fixed tests

* fix(condo): DOMA-9348 removed mocks data

* chore(condo): DOMA-9348 added feature flag

* fix(condo): DOMA-9348 fixed path to template

* fix(condo): DOMA-9348 hide empty button

* feat(condo): DOMA-9348 updated taskProgress

* fix(condo): DOMA-9348 fixed tests. Added translations

* fix(condo): DOMA-9348 fixed after review

* fix(condo): DOMA-9348 fixed renderMoney

* fix(condo): DOMA-9348 fixed locale for date

* chore(condo): DOMA-9348 updated after rebase

* refactor(condo): DOMA-9348 refactored after rebase

* fix(condo): DOMA-9348 fixed layout

* chore(condo): DOMA-9348 updated schema

* fix(condo): DOMA-9348 fixed render of property address

* chore(condo): DOMA-9348 updated submodule (callcenter) to master

* test(condo): DOMA-9348 fixed tests

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -912,6 +912,8 @@
   "pages.condo.ticket.exportBlank.HaveAllComments.tooltip": "If multiple tickets are selected, all comments will be printed. You won't be able to select specific ones.",
   "pages.condo.ticket.exportBlank.ShowAllComments.label": "Show comments",
   "pages.condo.ticket.exportBlank.HideAllComments.label": "Hide comments",
+  "pages.condo.ticket.generateDocument.label": "Generate document",
+  "pages.condo.ticket.generateDocument.completionWorks.label": "Work completion certificate",
   "pages.condo.ticket.select.group.flat": "Flats",
   "pages.condo.ticket.select.group.parking": "Parking units",
   "pages.condo.ticket.select.group.apartment": "Apartments",
@@ -2322,6 +2324,10 @@
   "tasks.TicketExportTask.progress.description.processing": "Tickets exported: {exported} from {total}",
   "tasks.TicketExportTask.progress.description.completed": "File has been created",
   "tasks.TicketExportTask.progress.description.completed.link.label": "Download",
+  "tasks.TicketDocumentGenerationTask.progress.title": "Generating document",
+  "tasks.TicketDocumentGenerationTask.progress.description.processing": "Preparing for download",
+  "tasks.TicketDocumentGenerationTask.progress.description.completed": "File has been created",
+  "tasks.TicketDocumentGenerationTask.progress.description.completed.link.label": "Download",
   "tasks.NewsItemRecipientsExportTask.progress.title": "Exporting news item recipients",
   "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Preparing for export",
   "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Recipients exported: {exported} from {total}",
@@ -2590,6 +2596,8 @@
   "api.ticket.FEEDBACK_VALUE_MUST_BE_SPECIFIED": "When specifying a comment or additional evaluation parameters, you must specify the evaluation itself",
   "api.ticket.TicketAutoAssignment.error.ASSIGNEE_NOT_FOUND": "There is no such employee (assignee) in the organization",
   "api.ticket.TicketAutoAssignment.error.EXECUTOR_NOT_FOUND": "There is no such employee (executor) in the organization",
+  "api.ticket.TicketDocumentGenerationTask.STATUS_IS_ALREADY_COMPLETED": "Task already completed successfully",
+  "api.ticket.TicketDocumentGenerationTask.STATUS_IS_ALREADY_ERROR": "The task has already completed with an error",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "No properties are found to export for current organization",
   "api.property.create.sameAddressError": "Property with the same address already exists in selected organization",
   "api.meter.exportMeterReadings.NOTHING_TO_EXPORT": "No meter readings to export for specified organization",
