--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -912,6 +912,8 @@
   "pages.condo.ticket.exportBlank.HaveAllComments.tooltip": "Если выбрано несколько заявок — в печать уйдут все комментарии. Выбрать конкретные не получится.",
   "pages.condo.ticket.exportBlank.ShowAllComments.label": "Показать комментарии",
   "pages.condo.ticket.exportBlank.HideAllComments.label": "Скрыть комментарии",
+  "pages.condo.ticket.generateDocument.label": "Сформировать акт",
+  "pages.condo.ticket.generateDocument.completionWorks.label": "Акт выполненных работы",
   "pages.condo.ticket.select.group.flat": "Квартиры",
   "pages.condo.ticket.select.group.parking": "Паркинг",
   "pages.condo.ticket.select.group.apartment": "Апартаменты",
@@ -2322,6 +2324,10 @@
   "tasks.TicketExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
   "tasks.TicketExportTask.progress.description.completed": "Файл сформирован",
   "tasks.TicketExportTask.progress.description.completed.link.label": "Скачать",
+  "tasks.TicketDocumentGenerationTask.progress.title": "Генерация акта",
+  "tasks.TicketDocumentGenerationTask.progress.description.processing": "Подготовка к скачиванию",
+  "tasks.TicketDocumentGenerationTask.progress.description.completed": "Файл сформирован",
+  "tasks.TicketDocumentGenerationTask.progress.description.completed.link.label": "Скачать",
   "tasks.NewsItemRecipientsExportTask.progress.title": "Выгрузка получателей новости",
   "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Подготовка к экспорту",
   "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
@@ -2590,6 +2596,8 @@
   "api.ticket.FEEDBACK_VALUE_MUST_BE_SPECIFIED": "При указании комментария или дополнительных параметров оценки нужно указать саму оценку",
   "api.ticket.TicketAutoAssignment.error.ASSIGNEE_NOT_FOUND": "Такого сотрудника нет в организации (ответственный)",
   "api.ticket.TicketAutoAssignment.error.EXECUTOR_NOT_FOUND": "Такого сотрудника нет в организации (исполнитель)",
+  "api.ticket.TicketDocumentGenerationTask.STATUS_IS_ALREADY_COMPLETED": "Задача уже успешно выполнена",
+  "api.ticket.TicketDocumentGenerationTask.STATUS_IS_ALREADY_ERROR": "Задача уже завершилась с ошибкой",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "Нет домов для экспорта, которые связаны с данной организацией",
   "api.property.create.sameAddressError": "Дом с таким адресом уже создан в выбранной организации",
   "api.meter.exportMeterReadings.NOTHING_TO_EXPORT": "Нет показаний ИПУ для экспорта, которые связаны с указанной организацией",
