feat(condo): DOMA-9539 add new meter resource and translations (#4927)

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1738,11 +1738,13 @@
   "meterResource.Electricity.name": "Электроэнергия",
   "meterResource.HeatSupply.name": "Теплоснабжение",
   "meterResource.GasSupply.name": "Газоснабжение",
+  "meterResource.ColdAir.name": "Холодоснабжение",
   "meterResource.ColdWater.measure": "куб. м.",
   "meterResource.HotWater.measure": "куб. м.",
   "meterResource.Electricity.measure": "кВт",
   "meterResource.HeatSupply.measure": "Гкал",
   "meterResource.GasSupply.measure": "куб. м.",
+  "meterResource.ColdAir.measure": "Гкал",
   "contact.AddContact": "Добавить жителя",
   "meter.AddMeterReadings": "Сдать показания ИПУ",
   "meter.AddPropertyMeterReadings": "Сдать показания ОДПУ",
