--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1738,11 +1738,13 @@
   "meterResource.Electricity.name": "Electricity",
   "meterResource.HeatSupply.name": "Heat supply",
   "meterResource.GasSupply.name": "Gas supply",
+  "meterResource.ColdAir.name": "Cold air supply",
   "meterResource.ColdWater.measure": "cubic meter",
   "meterResource.HotWater.measure": "cubic meter",
   "meterResource.Electricity.measure": "kw",
   "meterResource.HeatSupply.measure": "gcal",
   "meterResource.GasSupply.measure": "cubic meter",
+  "meterResource.ColdAir.measure": "gcal",
   "contact.AddContact": "Add contact",
   "meter.AddMeterReadings": "Add meter readings",
   "meter.AddPropertyMeterReadings": "Add property meter readings",
