--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -35,7 +35,7 @@
   "import.uploadModal.chooseFileForUpload": "Выбрать файл для загрузки",
   "import.uploadModal.message": "Загрузите свой файл с информацией о {prepositional} или воспользуйтесь шаблоном",
   "import.uploadModal.requiredFields.title": "Заполните обязательные поля",
-  "import.uploadModal.exampleLinkMessage": "Шаблон списка {genitive}.xslx",
+  "import.uploadModal.exampleLinkMessage": "Шаблон списка {genitive}.xlsx",
   "import.uploadModal.needHelp": "Нужна помощь",
   "import.progressModal.title": "Загрузка данных",
   "import.progressModal.message": "Пожалуйста, подождите",
@@ -498,7 +498,7 @@
   "OperationCompleted": "Готово",
   "Owner": "Владелец",
   "pages.auth.AlreadyRegistered": "Я уже зарегистрирован",
-  "pages.auth.register.error.smstimeout": "Следующее СМС собщение может быть отправлено через {timeRemain} с",
+  "pages.auth.register.error.smstimeout": "Следующее СМС сообщение может быть отправлено через {timeRemain} с",
   "pages.auth.ChangePasswordTitle": "Изменение пароля",
   "pages.auth.EmailIsAlreadyRegistered": "Данный адрес уже зарегистрирован",
   "pages.auth.EmailIsNoFound": "Email не найден",
@@ -549,7 +549,7 @@
   "pages.auth.register.SMSCodeMismatchError": "СМС код не совпадает",
   "pages.auth.register.SMSExpiredError": "Время действия СМС-кода истекло (1 минута). Нажмите на кнопку «Отправить СМС-код ещё раз»",
   "pages.auth.register.ConfirmActionExpiredError": "Телефон не подтвержден. Начните регистрацию сначала",
-  "pages.auth.register.SMSMaxRetriesReachedError": "Максимальное количестово попыток закончено. Начните сначала",
+  "pages.auth.register.SMSMaxRetriesReachedError": "Максимальное количество попыток закончено. Начните сначала",
   "pages.auth.register.SMSBadFormat": "Неправильный формат для СМС кода",
   "pages.auth.MainPage": "Вернуться на главную",
   "pages.auth.TooManyRequests": "Повторите попытку позже",
@@ -773,7 +773,7 @@
   "pages.condo.property.id.setupReportTitle": "Настроить отчет",
   "pages.condo.meter.create.AddMeterReadingPlaceholder": "Введите значение",
   "pages.condo.meter.create.AddMeterTourStepTitle": "Приборы учета для этого помещения еще не добавлены",
-  "pages.condo.meter.create.AddMeterTourStepMessage": "Добавьте их, чтобы в дальнейшем  заполнять только поле с показаниями",
+  "pages.condo.meter.create.AddMeterTourStepMessage": "Добавьте их, чтобы в дальнейшем заполнять только поле с показаниями",
   "pages.condo.meter.create.meterReadingTourStepTitle": "Введите показание, которое хотите передать",
   "pages.condo.meter.create.LastReading": "Предыдущие показания",
   "pages.condo.meter.create.MetersAndReadings": "Приборы учета и показания",
@@ -1093,7 +1093,7 @@
   "pages.condo.meter.reportingPeriod.create.organizationTooltip": "Этот период будет действовать для всех домов, у которых нет периода с определенным адресом",
   "pages.condo.meter.reportingPeriod.create.descriptionMessage": "Выберите все дома или конкретный дом. Укажите числа месяца, в которые вы принимаете показания ИПУ в счет текущего периода.",
   "pages.condo.meter.reportingPeriod.create.inputPostfix": "числа каждого месяца включительно",
-  "pages.condo.meter.reportingPeriod.create.addressPlaceholderIfDefaultPeriod": "Распрастраняется на все дома без специального периода",
+  "pages.condo.meter.reportingPeriod.create.addressPlaceholderIfDefaultPeriod": "Распространяется на все дома без специального периода",
   "pages.condo.meter.reportingPeriod.create.addressPlaceholder": "Выберите дом",
   "pages.condo.meter.reportingPeriod.EmptyList.header": "Период подачи показаний пока не добавлен",
   "pages.condo.meter.alert.BlockedEditing.title": "Редактирование прибора учета недоступно",
@@ -1339,7 +1339,7 @@
   "pages.clientCard.contactTickets": "Заявки контакта по этому адресу",
   "pages.clientCard.editContact": "Редактировать контакт",
   "pages.clientCard.addAddress": "Добавить адрес",
-  "pages.users.InviteNewUserButtonLabel": "Пригласить новго пользователя",
+  "pages.users.InviteNewUserButtonLabel": "Пригласить нового пользователя",
   "pages.users.InviteMessageTitle": "Вас пригласили в организацию «{name}»",
   "pages.users.PageTitle": "Пользователи",
   "pages.users.status.Accepted": "Принял приглашение",
