--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2704,6 +2704,7 @@
   "api.resident.RegisterServiceConsumerService.BILLING_ACCOUNT_NOT_FOUND": "No receipts or meters related to the entered account number were found. Please contact the management company.",
   "api.resident.RegisterServiceConsumerService.BILLING_ACCOUNT_OR_METER_NOT_FOUND": "No receipts or meters related to the entered account number were found. Please contact the management company.",
   "api.resident.sendMessageToResidentScopes.SCOPES_IS_EMPTY": "Scopes could not be empty",
+  "api.resident.registerResident.ADDRESS_NOT_FOUND": "Address was not found",
   "api.miniapp.sendB2CAppPushMessage.USER_NOT_FOUND": "Unable to find user by provided id.",
   "api.miniapp.sendB2CAppPushMessage.RESIDENT_NOT_FOUND": "Unable to find resident by provided id.",
   "api.miniapp.sendB2CAppPushMessage.APP_NOT_FOUND": "Unable to find app by provided id.",
