--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2704,6 +2704,7 @@
   "api.resident.RegisterServiceConsumerService.BILLING_ACCOUNT_NOT_FOUND": "Не удалось найти квитанции или счётчики по указанному лицевому счету. Пожалуйста, обратитесь в управляющую компанию.",
   "api.resident.RegisterServiceConsumerService.BILLING_ACCOUNT_OR_METER_NOT_FOUND": "Не удалось найти квитанции или счётчики по указанному лицевому счету. Пожалуйста, обратитесь в управляющую компанию.",
   "api.resident.sendMessageToResidentScopes.SCOPES_IS_EMPTY": "Необходимо передать хотя бы один элемент в scopes",
+  "api.resident.registerResident.ADDRESS_NOT_FOUND": "Адрес не найден",
   "api.miniapp.sendB2CAppPushMessage.USER_NOT_FOUND": "Не удалось найти пользователя по переданному id",
   "api.miniapp.sendB2CAppPushMessage.RESIDENT_NOT_FOUND": "Не удалось найти жителя по переданному id",
   "api.miniapp.sendB2CAppPushMessage.APP_NOT_FOUND": "Не удалось найти приложение по переданному id",
