feat(condo): DOMA-9628 push without yarn.lock and the naming of variables has been changed (#4948)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -631,6 +631,7 @@
   "pages.condo.property.field.Address.notFound.modal.contacts.description.bot": "Telegram-bot",
   "pages.condo.property.field.Name": "Name",
   "pages.condo.property.field.Organization": "Organization",
+  "pages.condo.property.field.Tin": "TIN",
   "pages.condo.property.field.Type": "Property type",
   "pages.condo.property.floor.Name": "Floor",
   "pages.condo.property.form.BuildingTabTitle": "Map",
