fix(condo): HOTFIX: Fix typo (#4954)

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -915,7 +915,7 @@
   "pages.condo.ticket.exportBlank.ShowAllComments.label": "Показать комментарии",
   "pages.condo.ticket.exportBlank.HideAllComments.label": "Скрыть комментарии",
   "pages.condo.ticket.generateDocument.label": "Сформировать акт",
-  "pages.condo.ticket.generateDocument.completionWorks.label": "Акт выполненных работы",
+  "pages.condo.ticket.generateDocument.completionWorks.label": "Акт выполненных работ",
   "pages.condo.ticket.select.group.flat": "Квартиры",
   "pages.condo.ticket.select.group.parking": "Паркинг",
   "pages.condo.ticket.select.group.apartment": "Апартаменты",
